tests/errors/bad_address.experr
is not a valid addr-spec
